Bug #480: Background visible when nav is open

--- a/frontend/styles/nav.css
+++ b/frontend/styles/nav.css
@@ -11,6 +11,7 @@ nav[data-controller="open-close"] {
   height: var(--nav-height);
 }
 body.no--scroll {
+  @apply bg-very-black text-white;
   overflow: hidden;
 }
 nav #main-site-nav-wrapper {
